# cpp

./: .gitignore
SDL/ex-01/: Makefile  main.cpp
arrays/ex-1/: Makefile  main.cpp
arrays/ex-2/: main.cpp
audio-player/: Makefile  README  main.c  test-deploy.sh
audio-player/Output/: Makefile
audio-player/Output/coreaudio/: Makefile  about.c  audio.c  configure.c  coreaudio.c  coreaudio.h  init.c
audio-player/libxmms/: config.h  util.h
audio-player/xmms/: Makefile  Makefile~  about.c  input.c  main.c  main.h  playlist.c  playlistwin.c  playlistwin.h  plugin.h  pluginenum.c  skinwin.c  vis.h  xmms.h
autoconf/: README
autoconf/ex-01/: README  configure.ac
autoconf/ex-01/src/: Makefile.am  main.cpp
autoconf/ex-02/: configure.ac  money-1.0.tgz
autoconf/ex-02/src/: Makefile.am  dollars.cpp  dollars.h
autoconf/ex-03/: configure.ac  money-1.0.tgz
autoconf/ex-03/lib/: Makefile.am  dollars.cpp
autoconf/ex-03/src/: Makefile.am  main.cpp
cmake-ex1/project1/: CMakeLists.txt  README  README.md  main.cpp
core-audio/base/: AudioCallback.cpp  AudioCallback.h  CMakeLists.txt  README.md  Utils.cpp  Utils.h  main.cpp
dynamic/: app.cpp
functions/ex-01/: main.cpp
makefile/ex-01/: Makefile  main.cpp
makefile/ex-01/lib/: vars.cpp  vars.h
oop/ex-01/: main.cpp
oop/ex-02/: main.cpp
oop/ex-03/: main.cpp
oop/ex-04/: main.cpp
operators-overload/ex-01/: Makefile  main.cpp
pointers/ex-01/: main.cpp
pointers/ex-02/: main.cpp
rnd/ex-01/: main.cpp
uselib/ex-01/: Makefile  main.cpp
uselib/ex-02/: Makefile
uselib/ex-02/SmartLibrary/: Makefile
(+4 files in other folders)
